--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,5 @@ APP_PORT=
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL=
+
+JWT_SECRET=
